Bug 422499 - Filtering for outliner does not find non-visible items - Part2 of fix, traverse recursively showing parents of leafs

--- a/bundles/org.eclipse.orion.client.ui/web/edit/common.css
+++ b/bundles/org.eclipse.orion.client.ui/web/edit/common.css
@@ -20,6 +20,10 @@
 	width: 250px;
 }
 
+.outlineRowMatchesFilter {
+	font-weight:bold;
+}
+
 .outlineRowHidden {
 	display: none;
 }
@@ -36,4 +40,3 @@
 	margin-bottom: -3px;
 	cursor: pointer;
 }
-
